--- a/kpServer.css
+++ b/kpServer.css
@@ -1,6 +1,6 @@
 
 body{
-     background-color:eee8aa;!important
+     background-color:palegoldenrod;!important
     width:500px;
 }
 
@@ -34,6 +34,6 @@ h3{
 }
 
 .header{
-    color:0000ff;!important
+    color:blue;!important
 }
 
